docs(finalizado): :sparkles: Se finalizo entidad Person
Todos los casos de uso fueron agregados

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "conventionalCommits.scopes": [
         "inicio",
-        "agregado"
-    ]
+        "agregado",
+        "finalizado"
+    ],
+    "java.dependency.packagePresentation": "hierarchical",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
